Use explicit attributes in the Nix workflow

--- a/.github/workflows/nix-config-base.json
+++ b/.github/workflows/nix-config-base.json
@@ -2,8 +2,9 @@
   "editions": [
     {
       "name": "tenzir",
+      "attribute": "tenzir-static",
+      "platform": "arm64-darwin",
       "gha-runner-labels": ["macos-15"],
-      "static": true,
       "upload-package-to-github": true,
       "package-stores": [
         "gcs:tenzir-dist-public/packages/main"
@@ -11,8 +12,9 @@
     },
     {
       "name": "tenzir",
+      "attribute": "tenzir-static",
+      "platform": "x86_64-linux",
       "gha-runner-labels": ["ubuntu-latest"],
-      "static": true,
       "upload-package-to-github": true,
       "package-stores": [
         "gcs:tenzir-dist-public/packages/main"
