--- a/.github/workflows/nix.yaml
+++ b/.github/workflows/nix.yaml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   build:
-    name: Build & Install
+    name: ${{ fromJSON(inputs.config).editions[0].attribute }}-${{ fromJSON(inputs.config).editions[0].platform }}
     runs-on: ${{ fromJSON(inputs.config).editions[0].gha-runner-labels }}
     steps:
       - name: Prevent pushing protected editions to public repos
@@ -29,10 +29,10 @@ jobs:
             exit 1
           done
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5.0.0
       - name: Tailscale
         if: false
-        uses: tailscale/github-action@v3
+        uses: tailscale/github-action@a392da0a182bba0e9613b6243ebd69529b1878aa  # v4.1.0
         with:
           oauth-client-id: ${{ secrets.TS_OAUTH_CLIENT_ID }}
           oauth-secret: ${{ secrets.TS_OAUTH_SECRET }}
@@ -71,37 +71,37 @@ jobs:
         run: |
           echo 'cfg outputs: ${{ toJSON(steps.cfg.outputs) }}'
       - name: Configure ssh-agent
-        uses: webfactory/ssh-agent@v0.9.0
+        uses: webfactory/ssh-agent@a6f90b1f127823b31d4d4a8d96047790581349bd  # v0.9.1
         with:
           ssh-private-key: ${{ secrets.TENZIR_PLUGINS_DEPLOY_KEY }}
       - name: Login to GitHub Container Registry
         if: steps.cfg.outputs.needs-ghcr == 'true'
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v6.3.0
         with:
           registry: ghcr.io
           username: tenzir-bot
           password: ${{ secrets.TENZIR_BOT_GITHUB_TOKEN }}
       - name: Login to Docker Hub
         if: steps.cfg.outputs.needs-docker-hub == 'true'
-        uses: docker/login-action@v3
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v6.3.0
         with:
           username: ${{ vars.DOCKERHUB_USER }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Configure AWS Credentials
         if: steps.cfg.outputs.needs-ecr == 'true'
-        uses: aws-actions/configure-aws-credentials@v4
+        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708  # v5.1.1
         with:
           role-to-assume: arn:aws:iam::622024652768:role/ecr-tenzir-ce-github-access
           aws-region: eu-west-1
       - name: Login to AWS ECR
         if: steps.cfg.outputs.needs-ecr == 'true'
-        uses: aws-actions/amazon-ecr-login@v2
+        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076  # v2.0.1
       - name: Install Nix
-        uses: cachix/install-nix-action@v30
+        uses: cachix/install-nix-action@7ab6e7fd29da88e74b1e314a4ae9ac6b5cda3801  # v31.8.0
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Setup Cachix
-        uses: cachix/cachix-action@v15
+        uses: cachix/cachix-action@0fc020193b5a1fa3ac4575aa3a7d3aa6a35435ad  # v16
         with:
           name: tenzir
           authToken: "${{ secrets.CACHIX_TENZIR_API_TOKEN }}"
@@ -116,7 +116,7 @@ jobs:
         run: |
           nix shell --inputs-from ./. \
             nixpkgs#git \
-            nixpkgs#nushellFull \
+            nixpkgs#nushell \
             nixpkgs#rclone \
             nixpkgs#skopeo \
             -c .github/workflows/nix.nu '${{ inputs.config }}'
@@ -124,7 +124,7 @@ jobs:
         if: >-
           runner.os == 'Linux' &&
           steps.cfg.outputs.upload-to-github == 'true'
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
         with:
           name: tarball
           path: "./packages/tarball/*.tar.gz"
@@ -133,7 +133,7 @@ jobs:
         if: >-
           runner.os == 'Linux' &&
           steps.cfg.outputs.upload-to-github == 'true'
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
         with:
           name: rpm
           path: "./packages/rpm/*.rpm"
@@ -142,7 +142,7 @@ jobs:
         if: >-
           runner.os == 'Linux' &&
           steps.cfg.outputs.upload-to-github == 'true'
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
         with:
           name: debian
           path: "./packages/debian/*.deb"
@@ -151,7 +151,7 @@ jobs:
         if: >-
           runner.os == 'macOS' &&
           steps.cfg.outputs.upload-to-github == 'true'
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
         with:
           name: macOS
           path: "./packages/macOS/*.pkg"
