--- a/.github/workflows/docker-config-base.json
+++ b/.github/workflows/docker-config-base.json
@@ -3,17 +3,17 @@
     {
       "name": "tenzir-de",
       "target": "tenzir-de",
-      "registries": []
+      "image-registries": []
     },
     {
       "name": "tenzir-node-de",
       "target": "tenzir-node-de",
-      "registries": []
+      "image-registries": []
     },
     {
       "name": "tenzir",
       "target": "tenzir",
-      "registries": [
+      "image-registries": [
         "ghcr.io",
         "docker.io"
       ]
@@ -21,7 +21,7 @@
     {
       "name": "tenzir-node",
       "target": "tenzir-node",
-      "registries": [
+      "image-registries": [
         "ghcr.io",
         "docker.io"
       ]
@@ -29,7 +29,7 @@
     {
       "name": "tenzir-deps",
       "target": "dependencies",
-      "registries": [
+      "image-registries": [
         "ghcr.io",
         "docker.io"
       ]
@@ -37,7 +37,7 @@
     {
       "name": "tenzir-dev",
       "target": "development",
-      "registries": [
+      "image-registries": [
         "ghcr.io",
         "docker.io"
       ]
@@ -45,7 +45,7 @@
     {
       "name": "tenzir-demo",
       "target": "tenzir-demo",
-      "registries": [
+      "image-registries": [
         "622024652768.dkr.ecr.eu-west-1.amazonaws.com",
         "docker.io"
       ]
