--- a/.github/workflows/nix.yaml
+++ b/.github/workflows/nix.yaml
@@ -39,64 +39,23 @@ jobs:
           tags: tag:ci
           version: 1.66.4
           args: --ssh
-      - name: Configure
-        id: cfg
-        run: |
-          # Configure
-          echo '::notice triggered by: ${{ github.event_name }}'
-          echo '::notice inputs = ${{ toJSON(fromJSON(inputs.config)) }}'
-          echo "::notice checking registries..."
-          echo "needs-docker-hub=false" >> "$GITHUB_OUTPUT"
-          echo "needs-ghcr=false" >> "$GITHUB_OUTPUT"
-          echo "needs-ecr=false" >> "$GITHUB_OUTPUT"
-          if [[ "${{ runner.os }}" == "Linux" ]]; then
-            jq -r '.editions | map( ."image-registries"[]) | unique | .[]
-                   | if . == "docker.io" then
-                       "needs-docker-hub=true"
-                     elif . == "ghcr.io" then
-                       "needs-ghcr=true"
-                     elif . == "622024652768.dkr.ecr.eu-west-1.amazonaws.com" then
-                       "needs-ecr=true"
-                     else
-                       empty
-                     end
-                   | @text' \
-                   <<< '${{ inputs.config }}' >> "${GITHUB_OUTPUT}"
-          fi
-          cat "$GITHUB_OUTPUT"
-      - name: Check outputs
-        run: |
-          echo 'cfg outputs: ${{ toJSON(steps.cfg.outputs) }}'
       - name: Configure ssh-agent
         uses: webfactory/ssh-agent@a6f90b1f127823b31d4d4a8d96047790581349bd  # v0.9.1
         with:
           ssh-private-key: ${{ secrets.TENZIR_PLUGINS_DEPLOY_KEY }}
-      - name: Login to GitHub Container Registry
-        if: steps.cfg.outputs.needs-ghcr == 'true'
-        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v6.3.0
-        with:
-          registry: ghcr.io
-          username: tenzir-bot
-          password: ${{ secrets.TENZIR_BOT_GITHUB_TOKEN }}
-      - name: Login to Docker Hub
-        if: steps.cfg.outputs.needs-docker-hub == 'true'
-        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef  # v6.3.0
-        with:
-          username: ${{ vars.DOCKERHUB_USER }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Configure AWS Credentials
-        if: steps.cfg.outputs.needs-ecr == 'true'
-        uses: aws-actions/configure-aws-credentials@61815dcd50bd041e203e49132bacad1fd04d2708  # v5.1.1
-        with:
-          role-to-assume: arn:aws:iam::622024652768:role/ecr-tenzir-ce-github-access
-          aws-region: eu-west-1
-      - name: Login to AWS ECR
-        if: steps.cfg.outputs.needs-ecr == 'true'
-        uses: aws-actions/amazon-ecr-login@062b18b96a7aff071d4dc91bc00c4c1a7945b076  # v2.0.1
       - name: Install Nix
         uses: cachix/install-nix-action@7ab6e7fd29da88e74b1e314a4ae9ac6b5cda3801  # v31.8.0
         with:
+          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/0d70460758949966e91d9ecb823b821f963cefbb.tar.gz
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to registries
+        if: runner.os == 'Linux'
+        uses: ./.github/actions/registry-login
+        with:
+          config: ${{ inputs.config }}
+          ghcr-token: ${{ secrets.TENZIR_BOT_GITHUB_TOKEN }}
+          dockerhub-user: ${{ vars.DOCKERHUB_USER }}
+          dockerhub-password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Setup Cachix
         uses: cachix/cachix-action@0fc020193b5a1fa3ac4575aa3a7d3aa6a35435ad  # v16
         with:
