--- a/.github/workflows/tenzir.yaml
+++ b/.github/workflows/tenzir.yaml
@@ -685,6 +685,17 @@ jobs:
           authToken: "${{ secrets.CACHIX_TENZIR_API_TOKEN }}"
           # Avoid pushing the full enterprise edition.
           pushFilter: "tenzir-ee"
+      - name: Download signed tarball (macOS)
+        if: runner.os == 'macOS'
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093  # v4.3.0
+        with:
+          name: tenzir-signed-tarball-arm64-darwin
+          path: ${{ runner.temp }}/signed-tarball
+      - name: Set signed tarball path (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          TARBALL_PATH="$(ls ${{ runner.temp }}/signed-tarball/*.tar.gz)"
+          echo "TENZIR_SIGNED_TARBALL_PATH=$TARBALL_PATH" >> "$GITHUB_ENV"
       - name: Build sdist
         working-directory: python
         run: |
